# serde_gvariant

./: .travis.yml  Cargo.toml  README.md
examples/: mmap.rs  ostree-commit.rs  ostree-dirmeta.rs  ostree-dirtree.rs
src/: config.rs  de.rs  errors.rs  lib.rs  ser.rs  variant.rs
src/de/: cursor.rs  mod.rs  seq.rs  some.rs  struc.rs  top.rs  util.rs  variant.rs
tests/: custom.rs  endianness.rs  examples.rs  gvariant_js.rs  ostree.rs  proptest.rs
tests/fixtures/misc/: ex-mmap.01
tests/fixtures/ostree/: basic-01.commit  basic-01.dirtree
