[package]
name = "serde_gvariant"
version = "0.0.1"
authors = ["Luca Bruno <luca.bruno@coreos.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
error-chain = {version = "^0.12", default-features = false}
log = "0.4"
ordered-float = "^1.0"
serde = "1"
serde_derive = "1"


[dev-dependencies]
env_logger = "^0.6"
proptest = "^0.9"
serde_bytes = "^0.11"
